--- a/driver.htm
+++ b/driver.htm
@@ -1452,15 +1452,15 @@ VxWorks</h3>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_file.htm">
-        File Operation</a><br>
+        File</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_ioctl.htm">
-        IOCTL Operation</a><br>
+        IOCTL</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_select.htm">
-        Select Operation</a><br>
+        Select</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_muxbind.htm">
@@ -1472,7 +1472,7 @@ VxWorks</h3>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_pipe.htm">
-        Create Pipe</a><br>
+        Pipe</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="driver/vxworks_23_09_dkm_taskhook.htm">
