--- a/driver/vxworks_23_09_dkm_hello.htm
+++ b/driver/vxworks_23_09_dkm_hello.htm
@@ -44,7 +44,6 @@ $ wr-cc main.c -o hello -dkm
 </p>
 <pre>
 -&gt; ld &lt; hello
-    value = -140737380219648 = 0xffff800006720500 = _sysTableEnd + 0xffff800006312500
 
 -&gt; moduleShow
             MODULE NAME             MODULE ID        GROUP #      SEGMENT ADDRESSES
@@ -52,11 +51,8 @@ $ wr-cc main.c -o hello -dkm
     hello                       0x00ffff800006720500       1 0xffffffff8c5a6000 (TEXT)
                                                              0xffffffff8c5a7000 (DATA)
                                                              0xffffffff8c5a7030 (BSS)
-    value = 0 = 0x0
 
--&gt; sp myProbe
-    Task spawned: id = 0xffff80000035a3d0, name = t1
-    value = -140737484839984 = 0xffff80000035a3d0 = _sysTableEnd + 0xffff7ffffff4c3d0
+-&gt; myProbe
     Hello, world!
 
 -&gt; devs
@@ -76,6 +72,8 @@ $ wr-cc main.c -o hello -dkm
      10 [ 5] /tmp
       2 [ 7] /ttyS0
     value = 0 = 0x0
+
+-&gt; unld "hello"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
