--- a/driver/vxworks_23_09_dkm_modulehook.htm
+++ b/driver/vxworks_23_09_dkm_modulehook.htm
@@ -45,10 +45,12 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp add_hook
+-&gt; add_hook
 
 -&gt; ld &lt; main
     create_hook: main
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
