--- a/driver/vxworks_23_09_dkm_pipe.htm
+++ b/driver/vxworks_23_09_dkm_pipe.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Create Pipe</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Pipe</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -71,7 +71,7 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp create_pipe
+-&gt; create_pipe
 
 -&gt; devs
     drv refs name
@@ -81,6 +81,10 @@ $ wr-cc main.c -o main -dkm
 
 [vxWorks *]# app
     Read 0x12, 0x34
+
+[vxWorks *]# C
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
