--- a/driver/vxworks_23_09_dkm_rtphook.htm
+++ b/driver/vxworks_23_09_dkm_rtphook.htm
@@ -78,7 +78,7 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp add_hook
+-&gt; add_hook
 
 -&gt; cmd
 
@@ -86,6 +86,10 @@ $ wr-cc main.c -o main -dkm
     create_hook, ./app
     post_hook
     init_hook
+
+[vxWorks *]# C
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
