--- a/driver/vxworks_23_09_dkm_select.htm
+++ b/driver/vxworks_23_09_dkm_select.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Select Operation</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>Select</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -164,11 +164,8 @@ $ wr-cc app.c -o app -dkm
 </p>
 <pre>
 -&gt; ld &lt; hello
-    value = -140737379950592 = 0xffff800006762000 = _sysTableEnd + 0xffff800006354000
 
--&gt; sp myProbe
-    Task spawned: id = 0xffff80000035bab0, name = t1
-    value = -140737484834128 = 0xffff80000035bab0 = _sysTableEnd + 0xffff7ffffff4dab0
+-&gt; myProbe
 
 -&gt; devs
     drv refs name
@@ -189,13 +186,16 @@ $ wr-cc app.c -o app -dkm
     value = 0 = 0x0
 
 -&gt; cmd
+
 [vxWorks *]# app
-    Launching process 'app' ...
-    Process 'app' (process Id = 0xffff80000035c640) launched.
     myOpen()
     myIOCTL(), wakeup
     myRead()
     myClose()
+
+[vxWorks *]# C
+
+-&gt; unld "hello"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
