--- a/driver/vxworks_23_09_dkm_syscallhook2.htm
+++ b/driver/vxworks_23_09_dkm_syscallhook2.htm
@@ -90,9 +90,9 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp add_hook
+-&gt; add_hook
 
--&gt; sp print_cc
+-&gt; print_cc
     cc 0
 
 -&gt; cmd
@@ -101,8 +101,10 @@ $ wr-cc main.c -o main -dkm
 
 [vxWorks *]# C
 
--&gt; sp print_cc
+-&gt; print_cc
     cc 100
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
