--- a/driver/vxworks_23_09_dkm_watchdog.htm
+++ b/driver/vxworks_23_09_dkm_watchdog.htm
@@ -68,20 +68,24 @@ $ wr-cc main.c -o main -dkm
 </p>
 <pre>
 -&gt; ld &lt; main
--&gt; sp start_dkm
 
--&gt; sp get_val
+-&gt; start_dkm
+
+-&gt; get_val
 4
 
--&gt; sp get_val
+-&gt; get_val
 8
 
--&gt; sp stop_dkm
--&gt; sp get_val
+-&gt; stop_dkm
+
+-&gt; get_val
 12
 
--&gt; sp get_val
+-&gt; get_val
 12
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
