--- a/driver/vxworks_23_09_dkm_ioctl.htm
+++ b/driver/vxworks_23_09_dkm_ioctl.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>IOCTL Operation</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - VxWorks - 23.09 - C/C++ - <b>IOCTL</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -90,11 +90,8 @@ $ wr-cc main.c -o hello -dkm
 </p>
 <pre>
 -&gt; ld &lt; hello
-    value = -140737379950592 = 0xffff800006762000 = _sysTableEnd + 0xffff800006354000
 
--&gt; sp myProbe
-    Task spawned: id = 0xffff80000035a580, name = t1
-    value = -140737484839552 = 0xffff80000035a580 = _sysTableEnd + 0xffff7ffffff4c580
+-&gt; myProbe
     Hello, world!
 
 -&gt; open("/dev/hello")
@@ -109,6 +106,8 @@ $ wr-cc main.c -o hello -dkm
     myIOCTL(), cmd 82, arg 0x0
     myClose()
     value = 0 = 0x0
+
+-&gt; unld "hello"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
