--- a/driver/vxworks_23_09_dkm_syscallhook.htm
+++ b/driver/vxworks_23_09_dkm_syscallhook.htm
@@ -137,13 +137,17 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp add_hook
+-&gt; add_hook
 
 -&gt; cmd
 
 [vxWorks *]# app
 
 file path: main
+
+[vxWorks *]# C
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
