--- a/driver/vxworks_23_09_dkm_taskhook.htm
+++ b/driver/vxworks_23_09_dkm_taskhook.htm
@@ -90,12 +90,16 @@ $ wr-cc main.c -o main -dkm
 <pre>
 -&gt; ld &lt; main
 
--&gt; sp add_hook
+-&gt; add_hook
 
 -&gt; cmd
 
 [vxWorks *]# app
     delete_hook: tJobTask
+
+[vxWorks *]# C
+
+-&gt; unld "main"
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
