RG28XX Added review page.

--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,7 @@
     <a href="#trimui">          <img src="img/photos/trimui.jpg"            class="t0" title="TRIMUI"/></a>
     <a href="#trimui-smart">    <img src="img/photos/trimui-smart.jpg"      class="t0" title="TRIMUI SMART"/></a>
     <a href="#miyoo-a30">       <img src="img/photos/miyoo-a30.jpg"         class="t0" title="Miyoo A30"/></a>
+    <a href="#rg28xx">          <img src="img/photos/rg28xx.jpg"            class="t0" title="Anbernic RG28XX"/></a>
     <a href="#pocketgo">        <img src="img/photos/pocketgo.jpg"          class="t0" title="PocketGo"/></a>
     <a href="#gkd-pixel">       <img src="img/photos/gkd-pixel.jpg"         class="t0" title="GKD Pixel"/></a>
     <a href="#miyoomini">       <img src="img/photos/miyoo-mini.jpg"        class="t0" title="Miyoo Mini"/></a>
@@ -1405,6 +1406,16 @@ Build SDL2</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_alpha.htm">
         Use Global Alpha Setting (Shader)</a><br>
+<br><br><br><br>
+
+<div id="rg28xx"></div>
+<h3><img src="img/photos/rg28xx.jpg" class="floatLeft"/>
+Anbernic RG28XX</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/rg28xx_spec.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
