RG28XX Added teardown images.

--- a/index.htm
+++ b/index.htm
@@ -1416,6 +1416,10 @@ Anbernic RG28XX</h3>
 &dash;
 <a href="handheld/rg28xx_spec.htm">
 介紹</a><br>
+
+&dash;
+<a href="handheld/rg28xx_teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
