RG28XX How to solder UART.

--- a/index.htm
+++ b/index.htm
@@ -1420,6 +1420,10 @@ Anbernic RG28XX</h3>
 &dash;
 <a href="handheld/rg28xx_teardown.htm">
 拆機</a><br>
+
+&dash;
+<a href="handheld/rg28xx_uart.htm">
+焊接UART</a><br>
 <br><br><br><br>
 
 <div id="pocketgo"></div>
