RG28XX Refined.

--- a/handheld/rg28xx_uart.htm
+++ b/handheld/rg28xx_uart.htm
@@ -11,6 +11,12 @@
 連接UART<br>
 <img src="rg28xx_uart/2.jpg" class="maxSize"><br><br>
 
+司徒後來改成使用耳機孔當作UART傳輸介面，跳線如下：<br>
+<img src="rg28xx_uart/3.jpg" class="maxSize"><br><br>
+
+完美的開發機器<br>
+<img src="rg28xx_uart/4.jpg" class="maxSize"><br><br>
+
 Baudrate 115200bps
 </p>
 <pre>
