RG28XX Added an input example.

--- a/index.htm
+++ b/index.htm
@@ -1424,6 +1424,14 @@ Anbernic RG28XX</h3>
 &dash;
 <a href="handheld/rg28xx_uart.htm">
 焊接UART</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/rg28xx_cpp_input.htm">
+    Input Event</a><br>
+
 <br><br><br><br>
 
 <div id="pocketgo"></div>
