RG28XX How to control the volume.

--- a/index.htm
+++ b/index.htm
@@ -1425,6 +1425,10 @@ Anbernic RG28XX</h3>
 <a href="handheld/rg28xx_uart.htm">
 焊接UART</a><br>
 
+&dash;
+<a href="handheld/rg28xx_volume.htm">
+如何控制音量</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
