RG28XX Added an example for volume control.

--- a/index.htm
+++ b/index.htm
@@ -1431,11 +1431,14 @@ Anbernic RG28XX</h3>
 
 &oplus;
 <b>C/C++</b><br>
-    
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/rg28xx_cpp_volume.htm">
+    Volume</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/rg28xx_cpp_input.htm">
     Input Event</a><br>
-
 <br><br><br><br>
 
 <div id="pocketgo"></div>
