RG28XX How to get the battery value.

--- a/index.htm
+++ b/index.htm
@@ -1429,6 +1429,10 @@ Anbernic RG28XX</h3>
 <a href="handheld/rg28xx_volume.htm">
 如何控制音量</a><br>
 
+&dash;
+<a href="handheld/rg28xx_battery.htm">
+如何取得電池電量</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
