RG28XX How to control vibration motor.

--- a/index.htm
+++ b/index.htm
@@ -1430,6 +1430,10 @@ Anbernic RG28XX</h3>
 如何控制音量</a><br>
 
 &dash;
+<a href="handheld/rg28xx_motor.htm">
+如何控制振動馬達</a><br>
+
+&dash;
 <a href="handheld/rg28xx_battery.htm">
 如何取得電池電量</a><br>
 
