Miyoo Mini Added u-boot env.

--- a/index.htm
+++ b/index.htm
@@ -1955,6 +1955,10 @@ SPI腳位</a><br>
 SDL Key</a><br>
 
 &dash;
+<a href="handheld/miyoo_mini_uboot_env.htm">
+U-Boot Env</a><br>
+
+&dash;
 <a href="handheld/miyoo_mini_motor.htm">
 增強振動馬達</a><br>
 
