--- a/handheld/miyoo_mini_uboot_env.htm
+++ b/handheld/miyoo_mini_uboot_env.htm
@@ -7,8 +7,8 @@
 <pre>
 SdUpgradeImage=miyoo283_fw.img
 baudrate=115200
-bootargs=console=ttyS0,115200 root=/dev/mtdblock4 rootfstype=squashfs ro init=/linuxrc LX_MEM=0x7f00000 mma_heap=mma_heap_name0,miu=0,sz=0x1500000 mma_memblock_remove=1 highres=off mmap_res0
-bootcmd=gpio output 85 1; bootlogo 0 0 0 0 0; mw 1f001cc0 11; gpio out 8 0; sf probe 0;sf read 0x22000000 ${sf_kernel_start} ${sf_kernel_size}; gpio out 8 1; sleepms 1000; gpio output 4 1; 0
+bootargs=console=ttyS0,115200 root=/dev/mtdblock4 rootfstype=squashfs ro init=/linuxrc LX_MEM=0x7f00000 mma_heap=mma_heap_name0,miu=0,sz=0x1500000 mma_memblock_remove=1 highres=off mmap_reserved=fb,miu=0,sz=0x300000,max_start_off=0x7C00000,max_end_off=0x7F00000
+bootcmd=gpio output 85 1; bootlogo 0 0 0 0 0; mw 1f001cc0 11; gpio out 8 0; sf probe 0;sf read 0x22000000 ${sf_kernel_start} ${sf_kernel_size}; gpio out 8 1; sleepms 1000; gpio output 4 1; bootm 0x22000000
 bootdelay=0
 cpu_part_start=14270000
 dispout=LCD752560
@@ -26,8 +26,6 @@ stderr=serial
 stdin=serial
 stdout=serial
 usb_folder=images
-
-Environment size: 926/4092 bytes
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
