Miyoo Mini Refined.

--- a/handheld/miyoo_mini_plus_restore_spi.htm
+++ b/handheld/miyoo_mini_plus_restore_spi.htm
@@ -59,15 +59,13 @@ SigmaStar # fatload mmc 0 0x21000000 spi.img 0 0
     reading spi.img
     16777216 bytes read in 1190 ms (13.4 MiB/s)
 
-SigmaStar # sf probe
+SigmaStar # sf probe;sf erase 0 1000000;sf write 0x21000000 0 0x1000000
     Flash is detected (0x0B05, 0xC8, 0x40, 0x18)
     SF: Detected nor0 with total size 16 MiB
 
-SigmaStar # sf erase 0 1000000
     _spi_flash_erase: addr 0x0, len 0x1000000 100%(cost 61079 ms)
     SF: 16777216 bytes @ 0x0 Erased: OK
 
-SigmaStar # sf write 0x21000000 0 0x1000000
     _spi_flash_write to 0x0, len 0x1000000 from 0x21000000 100%(cost 29740 ms)
     SF: 16777216 bytes @ 0x0 Written: OK
 
