Miyoo A30 Fixed openbor constant issue.

--- a/index.htm
+++ b/index.htm
@@ -1302,6 +1302,10 @@ Flush dcache、icache</a><br>
 解決Undefined reference to std::filesystem問題</a><br>
 
 &dash;
+<a href="handheld/miyoo_a30_fix_const.htm">
+解決Can't find openbor constant PLAYER_MAX_Z問題</a><br>
+
+&dash;
 <a href="handheld/miyoo_a30_fix_sdl_sensor.htm">
 解決Could not initialize SDL sensor subsystem問題</a><br>
 
