Miyoo A30 How to build openbor.

--- a/index.htm
+++ b/index.htm
@@ -1337,6 +1337,10 @@ Flush dcache、icache</a><br>
 <a href="handheld/miyoo_a30_build_sdl2.htm">
 Build SDL2</a><br>
 
+&dash;
+<a href="handheld/miyoo_a30_build_openbor.htm">
+Build OpenBOR</a><br>
+
 &oplus;
 <b>C/C++</b><br>
     
