--- a/umpc.htm
+++ b/umpc.htm
@@ -1896,52 +1896,52 @@ OMRON 840</h3>
 Zipit Z1</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/zipit1/review.htm">
+&dash;
+<a href="umpc/zipit1_spec.htm">
 介紹</a><br>
 
-&lowast;
-<a href="umpc/zipit1/teardown.htm">
+&dash;
+<a href="umpc/zipit1_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="umpc/zipit1/bootrom.htm">
-BootROM程式</a><br>
+&dash;
+<a href="umpc/zipit1_bootrom.htm">
+BootROM</a><br>
 
-&lowast;
-<a href="umpc/zipit1/uart.htm">
+&dash;
+<a href="umpc/zipit1_uart.htm">
 焊接UART接頭</a><br>
 
-&lowast;
-<a href="umpc/zipit1/reverse_zpm.htm">
+&dash;
+<a href="umpc/zipit1_reverse_zpm.htm">
 逆向zpm.bin</a><br>
 
-&lowast;
-<a href="umpc/zipit1/reverse_loader.htm">
+&dash;
+<a href="umpc/zipit1_reverse_loader.htm">
 逆向loader.bin</a><br>
 
-&lowast;
-<a href="umpc/zipit1/flash_openzipit.htm">
+&dash;
+<a href="umpc/zipit1_flash_openzipit.htm">
 安裝OpenZipit系統</a><br>
 
-&lowast;
-<a href="umpc/zipit1/upload_cpp.htm">
+&dash;
+<a href="umpc/zipit1_upload_cpp.htm">
 Upload程式(C/C++)</a><br>
 
-&lowast;
-<a href="umpc/zipit1/upload_python.htm">
+&dash;
+<a href="umpc/zipit1_upload_python.htm">
 Upload程式(Python)</a><br>
 
-&lowast;
-<a href="umpc/zipit1/build_kernel.htm">
-build kernel 2.4.21</a><br>
+&dash;
+<a href="umpc/zipit1_build_kernel.htm">
+Build Kernel 2.4.21</a><br>
 
 &oplus;
 <b>Assembly</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/zipit1/asm_hello.htm">
-    hello, world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/zipit1_asm_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="zipit2"></div>
