--- a/umpc.htm
+++ b/umpc.htm
@@ -1987,20 +1987,16 @@ build openwrt</a><br>
 Zipit Z3</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/zipit3/review.htm">
+&dash;
+<a href="umpc/zipit3_spec.htm">
 介紹</a><br>
 
-&lowast;
-<a href="umpc/zipit3/teardown.htm">
+&dash;
+<a href="umpc/zipit3_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="umpc/zipit3/screen.htm">
-可視角</a><br>
-
-&lowast;
-<a href="umpc/zipit3/uart.htm">
+&dash;
+<a href="umpc/zipit3_uart.htm">
 焊接UART接頭</a><br>
 <br><br><br><br>
 
