--- a/umpc.htm
+++ b/umpc.htm
@@ -179,40 +179,40 @@ iriver Dicple D7</h3>
 iriver Dicple D8</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/d8/review.htm">
+&dash;
+<a href="umpc/d8_spec.htm">
 介紹</a><br>
 
-&lowast;
-<a href="umpc/d8/teardown.htm">
+&dash;
+<a href="umpc/d8_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="umpc/d8/battery.htm">
+&dash;
+<a href="umpc/d8_battery.htm">
 更換電池</a><br>
 
-&lowast;
-<a href="umpc/d8/jack.htm">
+&dash;
+<a href="umpc/d8_jack.htm">
 焊接UART腳位</a><br>
 
-&lowast;
-<a href="umpc/d8/bootpin.htm">
+&dash;
+<a href="umpc/d8_bootpin.htm">
 焊接BOOT腳位</a><br>
 
-&lowast;
-<a href="umpc/d8/uart.htm">
+&dash;
+<a href="umpc/d8_uart.htm">
 UART、BOOT腳位</a><br>
 
-&lowast;
-<a href="umpc/d88/set_bl.htm">
+&dash;
+<a href="umpc/d88_set_bl.htm">
 如何設定背光</a><br>
 
-&lowast;
-<a href="umpc/d88/set_bl0.htm">
+&dash;
+<a href="umpc/d88_set_bl0.htm">
 如何關閉背光</a><br>
 
-&lowast;
-<a href="umpc/d88/set_vol.htm">
+&dash;
+<a href="umpc/d88_set_vol.htm">
 如何調整音量</a><br>
 
 &lowast;
