--- a/umpc/d5_spec.htm
+++ b/umpc/d5_spec.htm
@@ -4,13 +4,10 @@
 
 <h3><a href="../umpc.htm">微電腦</a> - iriver Dicple D5 - <b>簡要規格</b></h3>
 <hr size="1"><br>
-<p>
-簡要規格
-</p>
 <table>
   <tr><th>CHIP</th><td>Samsung SA58700X07</td></tr>
   <tr><th>CPU</th><td>ARM ARM9TDMI 200MHz</td></tr>
-  <tr><th>MEMORY</th><td>32MB RAM and 2GB Flash</td></tr>
+  <tr><th>MEMORY</th><td>32MB RAM<br>2GB Flash</td></tr>
   <tr><th>DISPLAY</th><td>3.0" 480x272</td></tr>
   <tr><th>INPUT</th><td>QWERTY</td></tr>
   <tr><th>BATTERY</th><td>800mA</td></tr>
