--- a/umpc/d7_spec.htm
+++ b/umpc/d7_spec.htm
@@ -4,13 +4,10 @@
 
 <h3><a href="../umpc.htm">微電腦</a> - iriver Dicple D7 - <b>簡要規格</b></h3>
 <hr size="1"><br>
-<p>
-簡要規格
-</p>
 <table>
   <tr><th>CHIP</th><td>Telechip TCC7801</td></tr>
   <tr><th>CPU</th><td>ARM ARM926EJ-S 266MHz (x2)</td></tr>
-  <tr><th>MEMORY</th><td>64MB RAM and 2GB Flash</td></tr>
+  <tr><th>MEMORY</th><td>64MB RAM<br>2GB Flash</td></tr>
   <tr><th>DISPLAY</th><td>3.0" 480x272 (Resistive)</td></tr>
   <tr><th>INPUT</th><td>QWERTY</td></tr>
   <tr><th>BATTERY</th><td>800mA</td></tr>
