iriver Dicple D8 Refined.

--- a/umpc.htm
+++ b/umpc.htm
@@ -215,44 +215,44 @@ UART、BOOT腳位</a><br>
 <a href="umpc/d88_set_vol.htm">
 如何調整音量</a><br>
 
-&lowast;
-<a href="umpc/d8/mtd_size.htm">
+&dash;
+<a href="umpc/d8_mtd_size.htm">
 如何調整MTD大小</a><br>
 
-&lowast;
-<a href="umpc/d88/get_batt.htm">
+&dash;
+<a href="umpc/d88_get_batt.htm">
 如何取得電池的狀態</a><br>
 
-&lowast;
-<a href="umpc/d88/flash.htm">
+&dash;
+<a href="umpc/d88_flash.htm">
 如何透過USBBoot刷機</a><br>
 
-&lowast;
-<a href="umpc/d8/fix_cursor.htm">
+&dash;
+<a href="umpc/d8_fix_cursor.htm">
 解決Cursor無法顯示的問題</a><br>
 
-&lowast;
-<a href="umpc/d8/doublebuf.htm">
+&dash;
+<a href="umpc/d8_doublebuf.htm">
 如何開啟fb0 double buffer</a><br>
 
-&lowast;
-<a href="umpc/d8/build_uboot.htm">
-build uboot</a><br>
+&dash;
+<a href="umpc/d8_build_uboot.htm">
+Build U-Boot</a><br>
 
 &oplus;
 <b>Debian 6</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/d8/debian6_setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/d8_debian6_setup.htm">
     安裝系統</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/d8/loadkeys.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/d8_loadkeys.htm">
     loadkeys</a><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="umpc/d8/build_kernel-2.6.24.htm">
-    build kernel 2.6.24</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="umpc/d8_build_kernel-2.6.24.htm">
+    Build Kernel 2.6.24</a><br>
 <br><br><br><br>
 
 <div id="d88"></div>
