GNU Added the description of Linux timer.

--- a/program.htm
+++ b/program.htm
@@ -75,6 +75,10 @@ GNU</h3>
     popen</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_time.htm">
+    Time</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_thread.htm">
     Thread</a><br>
 
