--- a/program.htm
+++ b/program.htm
@@ -58,25 +58,21 @@ GNU</h3>
 &oplus;
 <b>C/C++</b><br>
     
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_setup.htm">
-    開發環境</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_hello.htm">
-    hello, world!</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_crc32.htm">
-    crc32</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_popen.htm">
-    popen</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_hello.htm">
+    Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_time.htm">
     Time</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_crc32.htm">
+    CRC32</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/gnu/cpp_popen.htm">
+    popen</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_thread.htm">
