--- a/program/gnu_cpp_time.htm
+++ b/program/gnu_cpp_time.htm
@@ -167,9 +167,10 @@ int main(int argc, char **argv)
     nanosleep(&amp;req, &amp;rem);
     return 0;
 }
-</pre><br>
-
+</pre>
 <p>
+P.S. 依據man文件描述，usleep的輸入參數必須小於1000000<br><br>
+
 clock_nanosleep
 </p>
 <pre class="brush:cpp">
