--- a/program/gnu_cpp_time.htm
+++ b/program/gnu_cpp_time.htm
@@ -164,6 +164,7 @@ int main(int argc, char **argv)
     usleep(3000000);
 
     req.tv_sec = 3;
+    req.tv_nsec = 0;
     nanosleep(&amp;req, &amp;rem);
     return 0;
 }
@@ -186,6 +187,7 @@ int main(int argc, char **argv)
     struct timespec rem = {0};
 
     req.tv_sec = 3;
+    req.tv_nsec = 0;
     clock_nanosleep(CLOCK_REALTIME, 0, &amp;req, &amp;rem);
     return 0;
 }
