--- a/program.htm
+++ b/program.htm
@@ -70,10 +70,6 @@ GNU</h3>
     <a href="program/gnu_cpp_crc32.htm">
     CRC32</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_popen.htm">
-    popen</a><br>
-
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_thread.htm">
     Thread</a><br>
@@ -83,12 +79,12 @@ GNU</h3>
     Daemon</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="program/gnu_cpp_mmap_exec.htm">
-    MMAP(EXEC)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_syslog.htm">
     System Log</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_mmap_exec.htm">
+    mmmap(PROT_EXEC)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_json-c.htm">
@@ -185,6 +181,10 @@ GNU</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_shm.htm">
     shmget、shmat、shmdt、shmctl</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_popen.htm">
+    Process Pipe Stream(popen)</a><br>
 
 &oplus;
 <b>Assembly (ARM)</b><br>
