--- a/handheld/funkeys_uart.htm
+++ b/handheld/funkeys_uart.htm
@@ -1,63 +1,20 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>FunKey S</h3>
-<p><b>焊接UART</b></p>
-<hr size="1">
+<h3><a href="../index.htm">掌機</a> - FunKey S - <b>焊接UART</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/FunKey-Project/FunKey-S-Hardware">https://github.com/FunKey-Project/FunKey-S-Hardware</a><br><br>
+https://github.com/FunKey-Project/FunKey-S-Hardware<br><br>
 
 UART腳位位於PCB上方<br>
-<img src="uart/1.jpg" class="maxSize"><br><br>
+<img src="funkeys_uart/1.jpg" class="maxSize"><br><br>
 
 連接到電腦<br>
-<img src="uart/2.jpg" class="maxSize"><br><br>
+<img src="funkeys_uart/2.jpg" class="maxSize"><br><br>
 
-Baudrate: 115200bps
+Baudrate 115200bps
 </p>
 <pre>
 U-Boot 2020.10-funkey (Sep 24 2023 - 12:31:02 +0200) FunKey
@@ -276,14 +233,6 @@ root@FunKey:~# dmesg
 [    1.404307] OK
 [    1.543049] configfs-gadget gadget: high-speed config #1: FunKey
 [    3.979270] random: crng init done
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../handheld.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
