--- a/index.htm
+++ b/index.htm
@@ -5680,51 +5680,51 @@ build toolchain</a><br>
 <h3><img src="img/photos/funkeys.jpg" class="floatLeft"/>
 FunKey S</h3>
 <hr size="1"><br><br><br><br><br>
-&lowast;
-<a href="handheld/funkeys/review.htm">
+&dash;
+<a href="handheld/funkeys_spec.htm">
 介紹</a><br>
 
-&lowast;
-<a href="handheld/funkeys/teardown.htm">
+&dash;
+<a href="handheld/funkeys_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="handheld/funkeys/screen.htm">
+&dash;
+<a href="handheld/funkeys_screen.htm">
 可視角</a><br>
 
-&lowast;
-<a href="handheld/funkeys/sch.htm">
+&dash;
+<a href="handheld/funkeys_sch.htm">
 電路圖</a><br>
 
-&lowast;
-<a href="handheld/funkeys/replace_lcd.htm">
+&dash;
+<a href="handheld/funkeys_replace_lcd.htm">
 更換LCD</a><br>
 
-&lowast;
-<a href="handheld/funkeys/uart.htm">
+&dash;
+<a href="handheld/funkeys_uart.htm">
 焊接UART</a><br>
 
-&lowast;
-<a href="handheld/funkeys/build_funkey-os.htm">
-build FunKey-OS(musl)</a><br>
+&dash;
+<a href="handheld/funkeys_build_kernel.htm">
+Build Kernel 4.14.14</a><br>
 
-&lowast;
-<a href="handheld/funkeys/build_glibc.htm">
-build FunKey-OS(glibc)</a><br>
+&dash;
+<a href="handheld/funkeys_build_funkey-os.htm">
+Build FunKey-OS(musl)</a><br>
 
-&lowast;
-<a href="handheld/funkeys/build_kernel.htm">
-build kernel 4.14.14</a><br>
+&dash;
+<a href="handheld/funkeys_build_glibc.htm">
+Build FunKey-OS(glibc)</a><br>
 
 &oplus;
 <b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/funkeys/cpp_overclock.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/funkeys_cpp_overclock.htm">
     Overclock</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="handheld/funkeys/cpp_screentear.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/funkeys_cpp_screentear.htm">
     Screen Tearing</a><br>
 <br><br><br><br>
 
