--- a/index.htm
+++ b/index.htm
@@ -840,8 +840,8 @@ L2R2改造</a><br>
 <a href="handheld/trimui_sdlkey.htm">
 SDL Key</a><br>
 
-&lowast;
-<a href="handheld/trimui/overclock_dram.htm">
+&dash;
+<a href="handheld/trimui_overclock_dram.htm">
 DRAM超頻</a><br>
 
 &lowast;
