--- a/program.htm
+++ b/program.htm
@@ -71,6 +71,10 @@ GNU</h3>
     CRC32</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_signal.htm">
+    Signal</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_thread.htm">
     Thread</a><br>
 
@@ -79,20 +83,16 @@ GNU</h3>
     Daemon</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="program/gnu_cpp_json-c.htm">
+    JSON-C</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_syslog.htm">
     System Log</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="program/gnu_cpp_mmap_exec.htm">
     mmmap(PROT_EXEC)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_json-c.htm">
-    json-c</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/gnu/cpp_signal.htm">
-    signal</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/gnu/cpp_scandir.htm">
