--- a/program/gnu_cpp_signal.htm
+++ b/program/gnu_cpp_signal.htm
@@ -1,55 +1,9 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>GNU &gt;&gt; C/C++</h3>
-<p><b>signal</b></p>
-<hr size="1">
-<p>
-Signal：
-</p>
+<h3><a href="../program.htm">程式語言</a> - GNU - C/C++ - <b>Signal</b></h3>
+<hr size="1"><br>
 <table>
   <tr><th>Number</th><th>Name</th><th>Function</th></tr>
   <tr><td>1</td><td>SIGHUP</td><td>Hangup detected on controlling terminal or death of controlling process</td></tr>
@@ -91,25 +45,20 @@ Signal：
 main.c
 </p>
 <pre class="brush:cpp">
-#include &lt;signal.h&gt;
 #include &lt;stdio.h&gt;
-
-volatile int exit_loop = 0;
-
-void callback(int sig)
+#include &lt;unistd.h&gt;
+#include &lt;signal.h&gt;
+ 
+void handle_signal(int sig)
 {
     printf("User break\n");
     signal(SIGINT, SIG_DFL);
-    exit_loop = 1;
 }
-
+ 
 int main(int argc, char *argv[])
 {
-    signal(SIGINT, callback);
-
-    printf("wait user break...\n");
-    while (exit_loop == 0);
-    printf("exit program\n");
+    signal(SIGINT, handle_signal);
+    pause();
     return 0;
 }
 </pre><br>
@@ -120,17 +69,7 @@ int main(int argc, char *argv[])
 <pre>
 $ gcc main.c -o main
 $ ./main 
-    wait user break...
     ^C User break
-    exit program
-</pre><br>
+</pre>
 
-<p>
-<br><a href="../../program.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
